feat: Update holidays list API and add sample data
This commit updates the holidays list API URL to a new source
and adds a sample holidays data file. It also includes code
to transform the new API response to match the old format.

The old API was deprecated and no longer provides data.
The new API requires a transformation to match the old
data structure.

A sample holidays data file is added to assist in testing
and development.

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ OVERPASS_API_INTERPRETER_URL = https://overpass-api.de/api/interpreter
 
 OVERPASS_FILTER_OPERATOR = Ferrovías
 
-HOLIDAYS_LIST_API_URL = https://nolaborables.com.ar/api/v2/feriados
+HOLIDAYS_LIST_API_URL = https://api.argentinadatos.com/v1/feriados
